syntax = "proto3";
// Generated Webezy proto EDIT from CLI / Make manual edits here and run 'webezy build --manual'

package domain.metadata.v1;





// [webezy] - Messages descriptions for 'domain.metadata.v1'

// [webezy] - 'domain.metadata.v1.TestMetadata' 
message TestMetadata {
	string SimpleField = 1;
}
